--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -106,10 +106,10 @@
     <form onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="datetime-local" id="date" name="date" required />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
       <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-      <input type="text" id="destination" name="destination" placeholder="Adresse d'arrivée" required />
-      <textarea id="remarque" name="remarque" placeholder="Informations complémentaires"></textarea>
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
       <button type="submit">Envoyer la demande</button>
     </form>
   </div>
@@ -124,23 +124,23 @@
 
   <script type="text/javascript">
     (function() {
-      emailjs.init("U08QGWWRUenJDOllc");
+      emailjs.init("U08QGWWRUenJDOllc"); // Public key
     })();
 
     function sendEmail(event) {
       event.preventDefault();
-
-      emailjs.send("service_kdvgh9f", "template_5z5fvlc", {
+      emailjs.send("service_kdvgh9f", "template_5xtvlv", {
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
-        date: document.getElementById("date").value,
+        date: document.getElementById("dateheure").value,
         depart: document.getElementById("depart").value,
-        destination: document.getElementById("destination").value,
-        remarque: document.getElementById("remarque").value
+        destination: document.getElementById("arrivee").value,
+        remarque: document.getElementById("message").value
       })
       .then(function(response) {
         alert("Votre demande a bien été envoyée !");
       }, function(error) {
+        console.error("EmailJS error:", error);
         alert("Erreur lors de l'envoi. Veuillez réessayer.");
       });
     }
