--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     function sendEmail(event) {
       event.preventDefault();
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+      emailjs.send("service_kdvgh9f","template_5xt5vlv");
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
         date: document.getElementById("dateheure").value,
