--- a/index.html
+++ b/index.html
@@ -2,30 +2,35 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
+      background-color: #f5f5f5;
       color: #333;
+      margin: 0;
+      padding: 0;
     }
     header {
       background-color: #000;
-      color: white;
+      padding: 20px;
       text-align: center;
-      padding: 30px 10px;
-      font-size: 2.5rem;
-      font-weight: bold;
+    }
+    header img {
+      height: 120px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
     }
     .car-image {
-      width: 90%;
-      max-width: 700px;
+      width: 100%;
+      max-width: 600px;
       display: block;
-      margin: 20px auto;
-      border-radius: 10px;
+      margin: 0 auto 20px auto;
     }
     .buttons {
       display: flex;
@@ -38,36 +43,27 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      background-color: #000;
+      background-color: #333;
       color: white;
-      padding: 10px 20px;
+      padding: 10px 15px;
       border-radius: 5px;
       text-decoration: none;
-      font-weight: bold;
-    }
-    .presentation {
-      max-width: 900px;
-      margin: 30px auto;
-      text-align: center;
-      font-size: 1.1rem;
-      padding: 0 20px;
     }
     form {
-      max-width: 500px;
-      margin: 30px auto;
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      padding: 0 20px;
+      gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
     }
     input, textarea {
-      padding: 12px;
+      padding: 10px;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
     }
     button {
-      padding: 12px;
+      padding: 10px;
       background-color: #007bff;
       color: white;
       font-size: 16px;
@@ -80,7 +76,7 @@
       color: white;
       text-align: center;
       padding: 30px 10px;
-      margin-top: 50px;
+      margin-top: 40px;
     }
     .hidden-keywords {
       display: none;
@@ -88,33 +84,35 @@
   </style>
 </head>
 <body>
-  <header>OuassVTC</header>
+  <header>
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+  </header>
 
-  <img src="voiture.png" alt="Toyota Auris VTC" class="car-image" />
+  <div class="container">
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
 
-  <div class="buttons">
-    <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
-    <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
-    <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
-    <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
-    <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
-  </div>
+    <div class="buttons">
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
+    </div>
 
-  <div class="presentation">
-    <p>
-      Bienvenue chez OuassVTC, votre service de transport privé à Perpignan et ses alentours. Nous vous proposons des trajets confortables, sûris et ponctuels, avec des chauffeurs professionnels disponibles 7j/7. Notre objectif est de vous offrir une expérience de transport rapide, efficace et personnalisée pour tous vos besoins personnels ou professionnels.
+    <p style="text-align:center;font-weight:bold;">
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
     </p>
-  </div>
 
-  <form onsubmit="sendEmail(event)">
-    <input type="text" id="nom" name="nom" placeholder="Nom" required />
-    <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-    <input type="datetime-local" id="dateheure" name="dateheure" required />
-    <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-    <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-    <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-    <button type="submit">Envoyer la demande</button>
-  </form>
+    <form onsubmit="sendEmail(event)">
+      <input type="text" id="nom" name="nom" placeholder="Nom" required />
+      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
+      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <button type="submit">Envoyer la demande</button>
+    </form>
+  </div>
 
   <footer>
     © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
@@ -134,19 +132,21 @@
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
-        dateheure: document.getElementById("dateheure").value,
+        date: document.getElementById("dateheure").value,
         depart: document.getElementById("depart").value,
-        arrivee: document.getElementById("arrivee").value,
-        message: document.getElementById("message").value
+        destination: document.getElementById("arrivee").value,
+        remarque: document.getElementById("message").value
       })
       .then(function(response) {
         alert("Votre demande a bien été envoyée !");
       }, function(error) {
+        console.error("EmailJS error:", error);
         alert("Erreur lors de l'envoi. Veuillez réessayer.");
       });
     }
   </script>
 </body>
 </html>
+
 
 
