--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       text-align: center;
     }
     header img {
-      height: 120px;
+      height: 140px;
     }
     .container {
       padding: 20px;
@@ -28,7 +28,7 @@
     }
     .car-image {
       width: 100%;
-      max-width: 600px;
+      max-width: 450px;
       display: block;
       margin: 0 auto 20px auto;
     }
@@ -43,11 +43,20 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      background-color: #333;
+      background-color: #000;
       color: white;
       padding: 10px 15px;
       border-radius: 5px;
       text-decoration: none;
+    }
+    .buttons a img {
+      width: 20px;
+      height: 20px;
+    }
+    .info {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
     form {
       display: flex;
@@ -71,6 +80,11 @@
       border-radius: 5px;
       cursor: pointer;
     }
+    .estimation {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+    }
     footer {
       background-color: #000;
       color: white;
@@ -85,33 +99,37 @@
 </head>
 <body>
   <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+    <img src="Logo fond noir ouassvtc.png" alt="Logo OuassVTC" />
   </header>
 
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
 
     <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
 
-    <p style="text-align:center;font-weight:bold;">
+    <div class="info">
       OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
-    </p>
+    </div>
 
     <form onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
       <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
       <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
       <button type="submit">Envoyer la demande</button>
     </form>
+
+    <div class="estimation" id="prixEstime"></div>
+
+    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
 
   <footer>
@@ -119,7 +137,7 @@
   </footer>
 
   <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transfert gare Perpignan, aéroport VTC, transport sécurisé, transport Perpignan, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
   </div>
 
   <script type="text/javascript">
@@ -129,24 +147,44 @@
 
     function sendEmail(event) {
       event.preventDefault();
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
-        date: document.getElementById("dateheure").value,
-        depart: document.getElementById("depart").value,
-        destination: document.getElementById("arrivee").value,
-        remarque: document.getElementById("message").value
+        dateheure: document.getElementById("dateheure").value,
+        depart,
+        arrivee,
+        message: document.getElementById("message").value
       })
-      .then(function(response) {
-        alert("Votre demande a bien été envoyée !");
-      }, function(error) {
-        console.error("EmailJS error:", error);
-        alert("Erreur lors de l'envoi. Veuillez réessayer.");
-      });
+      .then(() => alert("Votre demande a bien été envoyée !"))
+      .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
+
+      // Estimation
+      estimateDistance(depart, arrivee);
+    }
+
+    function estimateDistance(depart, arrivee) {
+      const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.routes && data.routes.length) {
+            const distanceKm = data.routes[0].distance / 1000;
+            const distanceArrondie = Math.max(distanceKm, 5);
+            const prix = Math.max(20, distanceArrondie * 1.6);
+            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          }
+        });
+    }
+
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
     }
   </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
-
 
 
