--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
   <header>
-    <img src="Logo fond noir ouassvtc.png" alt="Logo OuassVTC" />
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
 
   <div class="container">
