--- a/index.html
+++ b/index.html
@@ -1,181 +1,91 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-5BG2J1H8TC');
-  </script>
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #000;
-      padding: 20px;
-      text-align: center;
-    }
-    header img {
-      height: 140px;
-    }
-    .container {
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    .car-image {
-      width: 100%;
-      max-width: 450px;
-      display: block;
-      margin: 0 auto 20px auto;
-    }
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    .buttons a {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      background-color: #000;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      text-decoration: none;
-    }
-    .buttons a img {
-      width: 20px;
-      height: 20px;
-    }
-    .info {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      max-width: 500px;
-      margin: 20px auto;
-    }
-    input, textarea {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .estimation {
-      text-align: center;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 30px 10px;
-      margin-top: 40px;
-    }
-    .hidden-keywords {
-      display: none;
-    }
+    body { font-family: Arial, sans-serif; background-color: #f5f5f5; margin: 0; padding: 0; color: #333; }
+    header { background-color: #000; padding: 20px; text-align: center; }
+    header img { height: 140px; }
+    .container { padding: 20px; max-width: 900px; margin: auto; }
+    .car-image { width: 100%; max-width: 450px; display: block; margin: 0 auto 20px auto; }
+    .buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px; }
+    .buttons a { background-color: #000; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none; display: flex; align-items: center; gap: 5px; }
+    .buttons a img { width: 20px; height: 20px; }
+    form { display: flex; flex-direction: column; gap: 10px; max-width: 500px; margin: 20px auto; }
+    input, textarea { padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
+    button { padding: 10px; background-color: #007bff; color: white; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
+    .estimation, .message { text-align: center; font-weight: bold; margin-top: 10px; }
+    footer { background-color: #000; color: white; text-align: center; padding: 30px 10px; margin-top: 40px; }
+    .hidden-keywords { display: none; }
   </style>
 </head>
 <body>
-  <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC" />
-  </header>
+  <header><img src="ouassvtc.png" alt="Logo OuassVTC"></header>
 
   <div class="container">
-    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-<div class="buttons">
-      <a href="tel:0644120784" onclick="trackClick('Appel')">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler
-      </a>
-      <a href="https://wa.me/33644120784" target="_blank" onclick="trackClick('WhatsApp')">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp
-      </a>
-      <a href="sms:+33644120784" onclick="trackClick('SMS')">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS
-      </a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/"
-         target="_blank" onclick="trackClick('Facebook')">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook
-      </a>
-      <a href="snapchat://add/ouassvtc" onclick="trackClick('Snapchat')">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat
-      </a>
-    </div>
+    <img src="voiture.png" alt="Voiture VTC" class="car-image">
 
-    <div class="info">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+    <div class="buttons">
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/>Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/>WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/>SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/>Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/>Snapchat</a>
     </div>
 
     <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <input type="text" id="nom" placeholder="Nom" required>
+      <input type="tel" id="telephone" placeholder="Téléphone" required>
+      <input type="text" id="depart" placeholder="Adresse de départ" required>
+      <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
+      <input type="datetime-local" id="dateheure" required>
+      <textarea id="message" placeholder="Informations complémentaires"></textarea>
       <button type="submit">Envoyer la demande</button>
     </form>
 
     <div class="estimation" id="prixEstime"></div>
+    <div class="message" id="status"></div>
     <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
 
-  <footer>
-    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
-  </footer>
+  <footer>© 2025 OuassVTC. Tous droits réservés.</footer>
+  <div class="hidden-keywords">Taxi, VTC Perpignan, Uber, G7, Bolt, transport privé</div>
 
-  <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
-  </div>
-
-  <script type="text/javascript">
-    // Tracking personnalisé pour Analytics
-    function trackClick(eventName) {
-      gtag('event', eventName, {
-        event_category: 'Interaction',
-        event_label: 'OuassVTC'
-      });
-    }
-
-    // EmailJS init
+  <script>
     (function() {
       emailjs.init("U08QGWWRUenJDOllc");
     })();
 
-    function sendEmail(event) {
+    async function getCoordinates(address) {
+      const response = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`);
+      const data = await response.json();
+      return data && data[0] ? { lat: data[0].lat, lon: data[0].lon } : null;
+    }
+
+    async function sendEmail(event) {
       event.preventDefault();
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
+      const coordsDep = await getCoordinates(depart);
+      const coordsArr = await getCoordinates(arrivee);
+
+      if (!coordsDep || !coordsArr) {
+        document.getElementById("prixEstime").innerText = "Adresses invalides pour le calcul de distance.";
+        return;
+      }
+
+      const routeUrl = `https://router.project-osrm.org/route/v1/driving/${coordsDep.lon},${coordsDep.lat};${coordsArr.lon},${coordsArr.lat}?overview=false`;
+      const route = await fetch(routeUrl).then(res => res.json());
+      let distanceKm = 0;
+
+      if (route.routes && route.routes.length) {
+        distanceKm = route.routes[0].distance / 1000;
+        const prix = Math.max(20, Math.max(distanceKm, 5) * 1.6).toFixed(2);
+        document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix} €`;
+      }
 
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
         nom: document.getElementById("nom").value,
@@ -186,33 +96,15 @@
         message: document.getElementById("message").value
       })
       .then(() => {
-        alert("Votre demande a bien été envoyée !");
-        gtag('event', 'Formulaire Envoyé', {
-          event_category: 'Formulaire',
-          event_label: 'Demande de réservation'
-        });
+        document.getElementById("status").innerText = "Demande envoyée avec succès !";
       })
-      .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
-
-      estimateDistance(depart, arrivee);
-    }
-
-    function estimateDistance(depart, arrivee) {
-      const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          if (data.routes && data.routes.length) {
-            const distanceKm = data.routes[0].distance / 1000;
-            const distanceArrondie = Math.max(distanceKm, 5);
-            const prix = Math.max(20, distanceArrondie * 1.6);
-            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          }
-        });
+      .catch(() => {
+        document.getElementById("status").innerText = "Erreur d'envoi. Veuillez réessayer.";
+      });
     }
 
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+      new google.translate.TranslateElement({ pageLanguage: 'fr' }, 'google_translate_element');
     }
   </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
