--- a/index.html
+++ b/index.html
@@ -6,20 +6,90 @@
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f5f5f5; margin: 0; padding: 0; color: #333; }
-    header { background-color: #000; padding: 20px; text-align: center; }
-    header img { height: 200px; }
-    .container { padding: 20px; max-width: 900px; margin: auto; }
-    .car-image { width: 100%; max-width: 300px; display: block; margin: 0 auto 20px auto; }
-    .buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px; }
-    .buttons a { background-color: #000; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none; display: flex; align-items: center; gap: 5px; }
-    .buttons a img { width: 20px; height: 20px; }
-    form { display: flex; flex-direction: column; gap: 10px; max-width: 500px; margin: 20px auto; }
-    input, textarea { padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
-    button { padding: 10px; background-color: #007bff; color: white; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
-    .estimation, .message { text-align: center; font-weight: bold; margin-top: 10px; }
-    footer { background-color: #000; color: white; text-align: center; padding: 30px 10px; margin-top: 40px; }
-    .hidden-keywords { display: none; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+    header img {
+      height: 200px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .car-image {
+      width: 100%;
+      max-width: 300px;
+      display: block;
+      margin: 0 auto 20px auto;
+    }
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .buttons a {
+      background-color: #000;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 5px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .buttons a img {
+      width: 20px;
+      height: 20px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    input, textarea {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .estimation, .message {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    footer {
+      background-color: #000;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+      margin-top: 40px;
+    }
+    .hidden-keywords {
+      display: none;
+    }
   </style>
 </head>
 <body>
