--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
       <div style="display:flex;align-items:center;gap:8px;">
         <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée avec code postal" required style="flex:1;" />
-        <button type="button" onclick="geoLocaliser('arrivee')" style="padding:6px;border:none;background:none;cursor:pointer;">
+        <button type="button" onclick="geoLocaliser('depart')" style="padding:6px;border:none;background:none;cursor:pointer;">
           <img src="https://img.icons8.com/ios-filled/24/marker.png" alt="Localiser">
         </button>
       </div>
